--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,11 +7,11 @@
           integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
     <link th:href="@{/css/workout.css}" rel="stylesheet"/>
+    <link th:href="@{/css/vendor/bootstrap.min.css}" rel="stylesheet"/>
 
-    <script crossorigin src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" th:src="@{/js/vendor/jquery-3.1.1.min.js}"></script>
 
     <title>Workout</title>
-
 
     <script type="text/javascript">
         jQuery(document).ready(function ($) {
@@ -49,10 +49,19 @@
 </div>
 <div id="root"></div>
 
-<script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+<!-- Required dependencies -->
+<script type="text/javascript" th:src="@{/js/vendor/prop-types.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/vendor/react.production.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/vendor/react-dom.production.min.js}"></script>
+<!-- Optional dependencies -->
+<script type="text/javascript" th:src="@{/js/vendor/react-transition-group.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/vendor/popper.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/vendor/react-popper.min.js}"></script>
+<!-- Reactstrap -->
+<script type="text/javascript" th:src="@{/js/vendor/reactstrap.min.js}"></script>
+<!-- App -->
+<script type="text/javascript" th:src="@{/js/components/example.js}"></script>
 <script type="text/javascript" th:src="@{/js/index.js}"></script>
-
 
 </body>
 </html>
